--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+bollard = "0.15.0"
 nixpacks = "1.16.0"
 tokio = { version = "1.32.0", features = ["full"] }
