--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.75"
 axum = { version = "0.6.20", features = ["tracing", "json", "tokio", "tower-log", "form", "headers"] }
 axum-auth = "0.4.0"
 bollard = "0.15.0"
+flate2 = "1.0.27"
 git2 = "0.18.0"
 hyper = { version = "0.14.27", features = ["server", "full"] }
 hyper_cgi = "22.4.15"
