--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,14 @@ anyhow = "1.0.75"
 axum = { version = "0.6.20", features = ["tracing", "json", "tokio", "tower-log", "form", "headers"] }
 axum-auth = "0.4.0"
 bollard = "0.15.0"
+bytes = "1.5.0"
 flate2 = "1.0.27"
+futures-util = "0.3.28"
 git2 = "0.18.0"
 hyper = { version = "0.14.27", features = ["server", "full"] }
 hyper_cgi = "22.4.15"
 nixpacks = "1.16.0"
 serde = { version = "1.0.188", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
+tokio-util = "0.7.9"
 url = "2.4.1"
