--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ hyper = { version = "0.14.27", features = ["server", "full"] }
 hyper_cgi = "22.4.15"
 lazy_static = "1.4.0"
 nixpacks = "1.16.0"
+password-hash = "0.5.0"
+rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["full"] }
