feat: added git auth

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,12 @@ bytes = "1.5.0"
 chrono = "0.4.31"
 clap = "4.4.5"
 config = "0.13.3"
+data-encoding = "2.4.0"
 dotenvy = "0.15.7"
 flate2 = "1.0.27"
 futures-util = "0.3.28"
 git2 = "0.18.0"
+http-body = "0.4.5"
 hyper = { version = "0.14.27", features = ["server", "full"] }
 hyper_cgi = "22.4.15"
 lazy_static = "1.4.0"
