Register proxy_listener TCP socket
Register proxy_listener

Fix proxy_listener binding to db address

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
+      PGPORT: ${DB_PORT}
     networks:
       - pemasak
     ports:
-      - "${DB_PORT}:5432"
-
+      - "${DB_PORT}:5433"
 
 volumes:
   db-data:
@@ -23,3 +23,4 @@ volumes:
 networks:
   pemasak:
     driver: bridge
+
