--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ regex = "1.10.1"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
+thiserror = "1.0.49"
 tokio = { version = "1.33.0", features = ["full"] }
 tokio-util = "0.7.9"
 tower = { version = "0.4.13", features = ["tokio"] }
