--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ regex = "1.10.1"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
+strip-ansi-escapes = "0.2.0"
 thiserror = "1.0.49"
 time = { version = "0.3.30", features=["macros", "formatting", "local-offset"]}
 tokio = { version = "1.33.0", features = ["full"] }
