--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ nixpacks = { git = "https://github.com/Meta502/nixpacks" }
 password-hash = "0.5.0"
 rand = "0.8.5"
 regex = "1.10.1"
+reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "tokio-rustls", "serde_json", "json", "cookies"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
