chore: change docker mode to host

--- a/config/fluentd/fluent.conf
+++ b/config/fluentd/fluent.conf
@@ -1,7 +1,5 @@
 <source>
   @type forward
-  port 24224
-  bind 0.0.0.0
 </source>
 
 <filter docker.*>
@@ -35,7 +33,7 @@
 
 <match docker.*>
   @type loki
-  url "http://loki:3100"
+  url "http://localhost:3100"
   extra_labels {"env":"prod"}
 
   <label>
