--- a/config/grafana/datasource.yml
+++ b/config/grafana/datasource.yml
@@ -3,7 +3,7 @@ apiVersion: 1
 datasources:
 - name: Prometheus
   type: prometheus
-  url: http://prometheus:9090 
+  url: http://localhost:9090 
   access: proxy
   editable: true
   isDefault: true
@@ -11,4 +11,4 @@ datasources:
 - name: Loki
   type: loki
   access: proxy
-  url: http://loki:3100
+  url: http://localhost:3100
