chore: ok. try to actualy have the server host network and the rest is on private

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,13 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-    network_mode: "host"
-    # networks:
-    #   - pemasak
+      PGPORT: ${DB_PORT}
+
+    # network_mode: "host"
+    networks:
+      - pemasak
     ports:
-      - "${DB_PORT}:5432"
+      - "${DB_PORT}:${DB_PORT}"
   
   server:
     container_name: server-pemasak
@@ -25,9 +27,9 @@ services:
     ports:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
     environment:
-      - "DATABASE_HOST=db"
-      - "DATABASE_PORT=5432"
-      - "APPLICATION_HOST=0.0.0.0"
+    #   - "DATABASE_HOST=db"
+    #   - "DATABASE_PORT=5432"
+    #   - "APPLICATION_HOST=0.0.0.0"
       - "GIT_BASE=./git-repo"
     volumes:
       - ./configuration.yml:/app/configuration.yml
@@ -36,6 +38,7 @@ services:
       - ./assets:/app/assets
     depends_on:
       - db
+      - fluentd
     network_mode: "host"
     # networks:
     #   - pemasak
@@ -45,23 +48,23 @@ services:
         fluentd-address: localhost:24224
         tag: docker.server-pemasak
 
-  # docker-host:
-  #   image: qoomon/docker-host
-  #   container_name: docker-host-pemasak
-  #   network_mode: "host"
-  #   # networks:
-  #   #   - pemasak
-  #   cap_add: [ 'NET_ADMIN', 'NET_RAW' ]
-  #   mem_limit: 8M
-  #   restart: always
+  docker-host:
+    image: qoomon/docker-host
+    container_name: docker-host-pemasak
+    # network_mode: "host"
+    networks:
+      - pemasak
+    cap_add: [ 'NET_ADMIN', 'NET_RAW' ]
+    mem_limit: 8M
+    restart: always
 
   prometheus:
     image: prom/prometheus
     container_name: prometheus-pemasak
     restart: always
-    network_mode: "host"
-    # networks:
-    #   - pemasak
+    # network_mode: "host"
+    networks:
+      - pemasak
     ports:
       - "9090:9090"
       
@@ -81,8 +84,9 @@ services:
     image: grafana/grafana
     container_name: grafana-pemasak
     restart: always
-    # networks:
-    #   - pemasak
+    # network_mode: "host"
+    networks:
+      - pemasak
     ports:
       - "3000:3000"
 
@@ -100,9 +104,9 @@ services:
     image: prom/node-exporter:latest
     container_name: node-exporter-pemasak
     restart: always
-    network_mode: "host"
-    # networks:
-    #   - pemasak
+    # network_mode: "host"
+    networks:
+      - pemasak
     command:
       - '--path.procfs=/host/proc'
       - '--path.rootfs=/rootfs'
@@ -118,9 +122,9 @@ services:
     image: grafana/fluent-plugin-loki:main
     container_name: fluentd-pemasak
     restart: always
-    network_mode: "host"
-    # networks:
-    #   - pemasak
+    # network_mode: "host"
+    networks:
+      - pemasak
     ports:
       - "24224:24224"
       - "24224:24224/udp"
@@ -138,9 +142,9 @@ services:
     image: grafana/loki:latest
     container_name: loki-pemasak
     restart: always
-    network_mode: "host"
-    # networks:
-    #   - pemasak
+    # network_mode: "host"
+    networks:
+      - pemasak
     ports:
       - "3100:3100"
     volumes:
