--- a/config/fluentd/fluent.conf
+++ b/config/fluentd/fluent.conf
@@ -33,7 +33,7 @@
 
 <match docker.*>
   @type loki
-  url "http://localhost:3100"
+  url "http://loki:3100"
   extra_labels {"env":"prod"}
 
   <label>
