--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -10,11 +10,11 @@ scrape_configs:
       password: strong-powerful-password
     scrape_interval: 1m
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
 
   - job_name: 'node'
     static_configs:
-      - targets: ['localhost:9100']
+      - targets: ['node-exporter:9100']
 
   # - job_name: 'nginx'
   #   static_configs:
@@ -23,4 +23,4 @@ scrape_configs:
   - job_name: 'docker'
     static_configs:
       # - targets: ['localhost:9323']
-      - targets: ['localhost:9323']
+      - targets: ['docker-host:9323']
