--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,35 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
       PGPORT: ${DB_PORT}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-d", "${DB_NAME}"]
+      interval: 30s
+      timeout: 60s
+      retries: 5
+      start_period: 80s
 
     # network_mode: "host"
     networks:
       - pemasak
     ports:
       - "${DB_PORT}:${DB_PORT}"
+
+  atlas:
+    container_name: atlas-pemasak
+    restart: no
+    image: arigaio/atlas:0.14.2
+    volumes:
+      - ./migrations:/migrations
+    depends_on:
+      db:
+        condition: service_healthy
+      
+  # networks:
+  #   - pemasak
+    network_mode: "host"
+    command : [ "migrate", "apply", 
+              "--dir", "file://migrations", 
+              "--url", "postgresql://${DB_USER}:${DB_PASSWORD}@localhost:${DB_PORT}/${DB_NAME}?search_path=public&sslmode=disable" ]
   
   server:
     container_name: server-pemasak
@@ -37,8 +60,13 @@ services:
       - ./git-repo:/app/git-repo
       - ./assets:/app/assets
     depends_on:
-      - db
-      - fluentd
+      db:
+        condition: service_started
+      fluentd:
+        condition: service_started
+      atlas:
+        condition: service_completed_successfully
+
     network_mode: "host"
     # networks:
     #   - pemasak
