--- a/configuration.example.yml
+++ b/configuration.example.yml
@@ -1,7 +1,7 @@
 application:
   port: 8080
   host: "0.0.0.0"
-  domain: "localhost"
+  domain: "localhost:8080"
   bodylimit: "25mib"
   ipv6: false
 
