--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ regex = "1.10.2"
 reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "tokio-rustls", "serde_json", "json", "cookies"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.193", features = ["derive"] }
-serde_json = "1.0.108"
+serde_json = { version = "1.0.108" , features = ["raw_value"] }
 strip-ansi-escapes = "0.2.0"
 thiserror = "1.0.50"
 time = { version = "0.3.30", features=["macros", "formatting", "local-offset"]}
@@ -70,4 +70,5 @@ features = [
   "chrono",
   "migrate",
   "json"
+  
 ]
