--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ garde = { version = "0.15.0", features = ["regex"] }
 git2 = "0.18.1"
 http-body = "0.4.5"
 hyper = { version = "0.14.27", features = ["server", "full"] }
+ipnet = { version = "2.9.0", features = ["serde", "json"] }
 lazy_static = "1.4.0"
 leptos = { version = "0.5.4", features = ["ssr", "experimental-islands"] }
 nixpacks = { git = "https://github.com/Meta502/nixpacks" }
