--- a/configuration.example.yml
+++ b/configuration.example.yml
@@ -1,6 +1,7 @@
 application:
   port: 8080
   host: "0.0.0.0"
+  hostip: "127.0.0.1"
   domain: "localhost:8080"
   bodylimit: "25mib"
   ipv6: false
