--- a/configuration.example.yml
+++ b/configuration.example.yml
@@ -8,7 +8,7 @@ application:
   idle: 30
 
 database:
-  user: "postgres"
+  user: "postgres" #make this postgres for now
   password: "password"
   host: "localhost"
   port: 5432
