--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,8 +120,8 @@ services:
 
     environment:
       # TODO: move this to env
-      - GF_SECURITY_ADMIN_USER=chef
-      - GF_SECURITY_ADMIN_PASSWORD=strong-powerful-password
+      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
         #- GF_SERVER_ROOT_URL=/grafana
         #- GF_SERVER_SERVE_FROM_SUB_PATH=true
     volumes:
