--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ DB_USER=postgres
 DB_PASSWORD=123
 DB_PORT=5432
 DB_NAME=postgres
+APPLICATION_PORT=8080
+DOMAIN=localhost
+GF_SECURITY_ADMIN_USER=user
+GF_SECURITY_ADMIN_PASSWORD=password
 
 # for sqlx
 DATABASE_URL=postgresql://postgres:123@localhost:5432/postgres
