chore: add caddy data volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -204,6 +204,7 @@ services:
       - "443:443"
     volumes:
       - ./config/caddy/Caddyfile:/etc/caddy/Caddyfile
+      - caddy:/data
     environment:
       - DOMAIN=${DOMAIN:-localhost}
       
@@ -216,6 +217,8 @@ volumes:
   grafana-data:
     driver: local
   loki-data:
+    driver: local
+  caddy:
     driver: local
 
 networks:
